Updates bigdata/hadoop/hdfs.md
Auto commit by GitBook Editor